--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,253 @@
+/* This is the stylesheet used on my website 'alexandertoop.com' */
+
+/* ------------------------- Classes ------------------------- */
+
+.navbar-nav > li {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.navbar {
+    background-color: #595959 !important;
+}
+
+.navbar .navbar-collapse {
+    text-align: center;
+}
+
+
 body {
-    padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    /* Font can be aquired from Google Fonts */
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    background-color: #f6f6f6;
 }
 
 a {
-    color: #00B7FF;
+    text-decoration: none;
+}
+
+a:link, a:visited {
+    color: blue;
+}
+
+a:hover {
+    color: red;
+}
+
+.img2 {
+    width: 92%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 12px;
+}
+
+
+h1 {
+    font-size: 40px;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+h2 {
+    font-size: 24px;
+    padding-top: 14px;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+h3 {
+    font-size: 18px;
+}
+
+.img3 {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    padding-bottom: 10px;
+}
+
+.container {
+    /*position: fixed;*/
+}
+
+.body {
+    padding-top: 70px;
+    padding-bottom: 15px;
+}
+
+.icons {
+    display: inline-block;
+    width: 100%;
+}
+
+
+.social-links {
+    margin-left: -28px;
+}
+
+.social-links li {
+    display: inline-block;
+    text-align: center
+
+}
+
+.social-links li a {
+    margin-top: 10px;
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    border: 4px solid #444444;
+    font-size: 20px;
+    line-height: 50px;
+    background-color: #ececec;
+    margin-left: 13px;
+}
+
+.social-links li a:hover {
+    color: #fff;
+    background-color: #d7d7d7;
+}
+
+.social-links li a:link {
+    color: black;
+    text-decoration: none;
+}
+
+.social-links li a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+.social-links-home {
+    margin-left: 50px;
+}
+
+.social-links-home li {
+    display: inline-block;
+    text-align: center
+
+}
+
+.social-links-home li a {
+    margin-top: 10px;
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    border: 4px solid #444444;
+    font-size: 20px;
+    line-height: 50px;
+    background-color: #ececec;
+    margin-left: 30px;
+}
+
+.social-links-home li a:hover {
+    color: #fff;
+    background-color: #d7d7d7;
+}
+
+.social-links-home li a:link {
+    color: black;
+    text-decoration: none;
+}
+
+.social-links-home li a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+
+.img1 {
+    max-width: 100%;
+    height: auto;
+    text-align: center;
+}
+
+.img4 {
+    width: 100%;
+    height: auto;
+    margin-top: 20px;
+    padding-bottom: 25px;
+}
+
+/* ------------------------- ids ------------------------- */
+
+#wrapper {
+    width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+#footer {
+    background-color: #595959;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    color: white;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    text-align: center;
+}
+
+#header {
+    color: black;
+    text-align: center;
+    padding-top: 80px;
+}
+
+#embedded_pdf {
+    padding-bottom: 20px;
+    text-align: center
+}
+
+#centered_text {
+    text-align: center;
+}
+
+
+/* ------------------------- media queries ------------------------- */
+
+@media only screen and (max-width: 768px) {
+    #wrapper {
+        width: 96%;
+    }
+
+    body {
+        /* Font can be aquired from Google Fonts */
+        font-family: 'Open Sans', sans-serif;
+        font-size: 15px;
+        /* Light grey background */
+        background-color: #f6f6f6;
+    }
+}
+
+@media (max-width: 767px) {
+    .navbar-toggleable-sm {
+        clear: both;
+    }
+
+}
+
+@media only screen and (max-width: 768px) {
+    .img1 {
+        width: 99%;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 20px;
+    }
+
+    .img4 {
+        width: 99%;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 20px;
+    }
 }
